# LLM

./: .gitattributes  .gitignore  .gitmodules  README.md
GPT/: README.md
GPT/TinyGPT/src/: Blas.cpp  CMakeLists.txt
GPT/picoGPT/: gpt2.py  requirements.txt
GPT2/: README.md
GPT2/TinyGPT/: .gitignore
GPT2/TinyGPT/src/: CMakeLists.txt  Tensor.h
